# django-svelte-sample-app

./: db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
djangoXsvelte/: asgi.py  settings.py  urls.py  wsgi.py
djangoXsvelte/api/: views.py
djangoXsvelte/helpers/: forms.py  functions.py
djangoXsvelte/spa/: apps.py  views.py
djangoXsvelte/static/frontend/: bundle.css  bundle.js  bundle.js.map
djangoXsvelte/templates/registration/: login.html
djangoXsvelte/templates/spa/: index.html
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
frontend/src/lib/: Button.svelte
frontend/src/lib/Form/: Field.svelte  Form.svelte  form-key.js  index.js
frontend/src/lib/store/: store.js
frontend/src/lib/utils/: validation.js
